Upgrading and extending SCC parameters.

--- a/modules/administration/pages/disconnected-setup.adoc
+++ b/modules/administration/pages/disconnected-setup.adoc
@@ -6,7 +6,7 @@ When it is not possible to connect {productname} to the internet, you can use it
 The repository mirroring tool (RMT) is available on {sle}{nbsp}15 and later.
 RMT replaces the subscription management tool (SMT), which can be used on older {sle} installations.
 
-In a disconnected {productname} setup, RMT or SMT uses an external network to connect to {scc}.
+In a disconnected {productname} setup, RMT or SMT uses an external network to connect to {scclongform}.
 All software channels and repositories are synchronized to a removable storage device.
 The storage device can then be used to update the disconnected {productname} installation.
 
@@ -177,7 +177,7 @@ mgradm install podman --mirrorPath </media/disk>
 
 === Synchronize
 
-When you have removable media loaded with your {scc} data, you can use it to synchronize your disconnected server.
+When you have removable media loaded with your {scclongform} data, you can use it to synchronize your disconnected server.
 
 [WARNING]
 ====
@@ -208,7 +208,7 @@ mgrctl exec -ti -- mgr-sync add channel channel-label
 
 [NOTE]
 ====
-Be aware that if [literal]``server.susemanager.fromdir`` is set, {productname} will not be able to check if {scc} credentials are valid or not.
+Be aware that if [literal]``server.susemanager.fromdir`` is set, {productname} will not be able to check if {scclongform} credentials are valid or not.
 Instead, a warning sign will be displayed and no SCC online check will be performed.
 ====
 
