--- a/modules/administration/pages/infra-maintenance.adoc
+++ b/modules/administration/pages/infra-maintenance.adoc
@@ -31,7 +31,7 @@ New and updated packages become available automatically.
 
 ifeval::[{suma-content} == true]
 
-To keep {susemgr} up to date, either connect it directly to {scc} or use {rmtool} (RMT).
+To keep {susemgr} up to date, either connect it directly to {scclongform} or use {rmtool} (RMT).
 You can use RMT as a local installation source for disconnected environments.
 
 endif::[]
