--- a/modules/administration/pages/mgr-sync.adoc
+++ b/modules/administration/pages/mgr-sync.adoc
@@ -3,7 +3,7 @@
 
 The ``mgr-sync`` tool is used at the command prompt.
 It provides functions for using {productname} that are not always available in the {webui}.
-The primary use of ``mgr-sync`` is to connect to the {scc}, retrieve product and package information, and prepare channels for synchronization with the {productname} Server.
+The primary use of ``mgr-sync`` is to connect to the {scclongform}, retrieve product and package information, and prepare channels for synchronization with the {productname} Server.
 
 This tool is designed for use with a {suse} support subscription.
 It is not required for open source distributions, including {opensuse}, {centos}, and {ubuntu}.
