--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -36,7 +36,7 @@ ifeval::[{suma-content} == true]
 [NOTE]
 ====
 You must have a monitoring add-on subscription for each client you want to monitor.
-Visit the {scc} to manage your {productname} subscriptions.
+Visit the {scclongform} to manage your {productname} subscriptions.
 ====
 endif::[]
 
