--- a/modules/administration/pages/troubleshooting/tshoot-firewalls.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-firewalls.adoc
@@ -29,9 +29,9 @@ Result: Sync to SCC is either able to reach the URLs required, or rejects the r
 ////
 
 If you are using a firewall that blocks outgoing traffic, it can either ``REJECT`` or ``DROP`` network requests.
-If it is set to ``DROP`` then you might find that synchronizing with the {scc} times out.
+If it is set to ``DROP`` then you might find that synchronizing with the {scclongform} times out.
 
-This occurs because the synchronization process needs to access third-party repositories that provide packages for non-{suse} clients, and not just the {scc}.
+This occurs because the synchronization process needs to access third-party repositories that provide packages for non-{suse} clients, and not just the {scclongform}.
 When the {productname} Server attempts to reach these repositories to check that they are valid, the firewall drops the requests, and the synchronization continues to wait for the response until it times out.
 
 If this occurs, the synchronization takes a long time before it fails, and your non-{suse} products are not shown in the product list.
