--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -17,7 +17,7 @@ You can also migrate openSUSE Leap to a later minor version or to the correspond
 * openSUSE Leap 15.5 to {sles} 15 SP5
 
 
-In {sles}{nbsp}12 and later, {suse} supports service pack skipping if {scc} provides it.
+In {sles}{nbsp}12 and later, {suse} supports service pack skipping if {scclongform} provides it.
 For example, you can upgrade from {sles}{nbsp}15 to SP2, without installing SP1.
 
 For supported {sles} upgrade paths, see link:https://documentation.suse.com/en-us/sles/15-SP4/html/SLES-all/cha-upgrade-paths.html#sec-upgrade-paths-supported[].
