--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -9,7 +9,7 @@ ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {debian} repository URLs are available from {scc}
+* {debian} repository URLs are available from {scclongform}
 * Packages and metadata are provided by Debian, not by {suse}
 * For supported products, see the support table and the release notes
 ====
