--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -7,7 +7,7 @@ ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {oracle} repository URLs are available from {scc}
+* {oracle} repository URLs are available from {scclongform}
 * Packages and metadata are provided by Oracle, not by {suse}
 * {oracle} base media repositories are freely available for download from https://yum.oracle.com/
 * For supported products, see the support table and the release notes
