--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -20,7 +20,7 @@ ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {sll} repository URLs are available from {scc}
+* {sll} repository URLs are available from {scclongform}
 * Packages and metadata are provided by {suse}
 * For supported products, see the support table and the release notes
 ====
@@ -57,7 +57,7 @@ endif::[]
 For {sll} clients, some required packages are contained on the {rhel} or {centos} installation media.
 You must have these packages installed before you can register a {sll} client.
 
-The {sll} product is provided by {scc}.
+The {sll} product is provided by {scclongform}.
 This also includes the client tools package.
 
 Before you register {sll} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
