--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -7,7 +7,7 @@ ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {ubuntu} 20.04, 22.04 and 24.04 repository URLs are available from {scc}
+* {ubuntu} 20.04, 22.04 and 24.04 repository URLs are available from {scclongform}
 * Packages and metadata are provided by Ubuntu, not by {suse}
 * For supported products, see the support table and the release notes
 ====
