--- a/modules/common-workflows/pages/workflow-client-onboarding.adoc
+++ b/modules/common-workflows/pages/workflow-client-onboarding.adoc
@@ -77,7 +77,7 @@ This command should return your new FQDN.
 .Procedure: Prepare Software Channels on the {productname} Server
 [role=procedure]
 . In the {productname} {webui}, navigate to menu:Admin[Setup Wizard].
-. In the [guimenu]``Organization Credentials`` tab, ensure you have entered your {scc} credentials, and are correctly authenticated.
+. In the [guimenu]``Organization Credentials`` tab, ensure you have entered your {scclongform} credentials, and are correctly authenticated.
 . In the [guimenu]``Products`` tab, ensure that the product catalog is fully updated:
 . Use the product search bar to find the channels you need for your client operating system.
   Check the channels you want to install, and click btn:[Add products]:
