--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -65,7 +65,7 @@ image::wf-inplaceMigration-03.png[scaledwidth=80%]
 autoupgrade=1 insecure=1 useonlinerepo
 ----
 +
-. This will tell your profile to treat its install as an upgrade, and allow http access to the {productname} Server to obtain installer updates without needing to go to {scc}.
+. This will tell your profile to treat its install as an upgrade, and allow http access to the {productname} Server to obtain installer updates without needing to go to {scclongform}.
 +
 image::wf-inplaceMigration-04.png[scaledwidth=80%]
 +
