--- a/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
@@ -88,7 +88,7 @@ curl -Sks $url | xz -d > $device -v
 . *Finalize Boot and Configuration*
 
 .. Power off the instance, remove the virtual CD from the boot sequence, and start it again to boot from the newly created instance.
-.. Follow on-screen installation directions and, if needed, register with {scc}, adding the SUSE Manager Server Extension.
+.. Follow on-screen installation directions and, if needed, register with {scclongform}, adding the SUSE Manager Server Extension.
 
 . *Install VMware Tools (if applicable)*
 
