--- a/modules/installation-and-upgrade/pages/_install-ibmz.adoc
+++ b/modules/installation-and-upgrade/pages/_install-ibmz.adoc
@@ -8,9 +8,9 @@ It assumes that you are a z/VM systems programmer trained on {ibmz} operating pr
 This section does not cover the variety of hardware configuration profiles available on {ibmz}, but provides a foundational overview of the procedure and requirements necessary for a successful {productname} Server deployment on {ibmz}.
 
 This section describes how to install {susemgr} Server using {sle} installation media.
-You must have already registered your {susemgr} product with {scc}, and have obtained a registration code.
+You must have already registered your {susemgr} product with {scclongform}, and have obtained a registration code.
 
-For information on registering with {scc}, retrieving your organization credentials from {scc}, or obtaining installation media, see xref:installation-and-upgrade:general-requirements.adoc[].
+For information on registering with {scclongform}, retrieving your organization credentials from {scclongform}, or obtaining installation media, see xref:installation-and-upgrade:general-requirements.adoc[].
 
 
 
