--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
@@ -93,7 +93,7 @@ transactional-update register -r <REGCODE> -e <your_email>
 
 . Reboot.
 
-. Register {productname} {productnumber} Proxy with {scc}.
+. Register {productname} {productnumber} Proxy with {scclongform}.
 +
 
 ----
