--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
@@ -102,7 +102,7 @@ transactional-update register -r <REGCODE> -e <your_email>
 
 . Reboot.
 
-. Register {productname} {productnumber} with {scc}.
+. Register {productname} {productnumber} with {scclongform}.
 +
 
 ----
