--- a/modules/installation-and-upgrade/pages/general-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/general-requirements.adoc
@@ -3,7 +3,7 @@
 
 Before you begin installation, ensure that you have:
 
-. A {scc} account.
+. A {scclongform} account.
   This account gives you access to organization credentials and registration keys for {productname} Server, Proxy and Retail Branch Server.
 . Supported Browsers for {productname} {webui}.
 . SSL certificates for your environment.
@@ -18,9 +18,9 @@ The following section contains more information on these requirements.
 
 
 [[install.scc-register]]
-== {scc} Account and Credentials
+== {scclongform} Account and Credentials
 
-Create an account with {scc} prior to deployment of {productname} {productnumber}.
+Create an account with {scclongform} prior to deployment of {productname} {productnumber}.
 
 [[creating.scc.account.mgr]]
 .Procedure: Obtain Your Organization Credentials
