--- a/modules/installation-and-upgrade/pages/install-proxy.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy.adoc
@@ -36,7 +36,7 @@ Use these settings to create a new virtual machine with [command]``virt-manager`
 === SLES KVM Settings
 
 This section covers the {productname} Proxy installation, using the full installation media with KVM and [command]``virt-manager``.
-Before you begin, you will need to have created an account with {scc}, and downloaded the {sles} installation media.
+Before you begin, you will need to have created an account with {scclongform}, and downloaded the {sles} installation media.
 
 
 
