--- a/modules/quickstart/pages/container-deployment/suma/quickstart-deploy-suma-proxy.adoc
+++ b/modules/quickstart/pages/container-deployment/suma/quickstart-deploy-suma-proxy.adoc
@@ -97,7 +97,7 @@ image::setup-wizard.png[scaledwidth=80%]
 
 .Task: Download the Installation Media
 . Locate the {sle-micro} {microversion} installation media at https://www.suse.com/download/sle-micro/.
-. You will need an account with {scc} and must be logged in to download the ISO.
+. You will need an account with {scclongform} and must be logged in to download the ISO.
 . Download the following file: [filename]``SLE-Micro-5.5-DVD-x86_64-GM-Media1.iso`` 
 . Prepare a USB fash disk or DVD for installation.
 . Insert a DVD or a bootable USB stick containing the installation image for {sle-micro} {microversion}.
@@ -112,18 +112,18 @@ For detailed documentation on preparing your machines OS (virtual or physical), 
 . Use the arrow keys to select [systemitem]``Installation``.
 . Adjust Keyboard and language. Click the [systemitem]``checkbox`` to accept the License Agreement.
 . Click [systemitem]``Next`` to continue.
-. Select your registration method. For this example we will register the server with {scc}.
+. Select your registration method. For this example we will register the server with {scclongform}.
 +
 
 .{productname} {productnumber} Proxy as an extension
 [NOTE]
 ====
-The {productname} {productnumber} Proxy is registered as an extension. Therefore, in addition to acquiring an {scc} registration key for {sle-micro} {microversion}, you will also need an {scc} registration code for the following extension:
+The {productname} {productnumber} Proxy is registered as an extension. Therefore, in addition to acquiring an {scclongform} registration key for {sle-micro} {microversion}, you will also need an {scclongform} registration code for the following extension:
 
 * {productname} {productnumber} Proxy
 ====
 
-. Enter your {scc} Email address. 
+. Enter your {scclongform} Email address. 
 . Enter your registration code for {sle-micro} {microversion}.
 . Click [systemitem]``Next`` to continue.
 . On the [systemitem]``Extension and Module Selection`` page uncheck the **Hide Development Versions** checkbox. 
