--- a/modules/quickstart/pages/legacy-installation/quickstart-install-uyuni-server.adoc
+++ b/modules/quickstart/pages/legacy-installation/quickstart-install-uyuni-server.adoc
@@ -124,9 +124,9 @@ When you have completed the {productname} {webui} setup, you are taken to the me
 
 
 
-== Optional: Synchronizing Products from {scc}
+== Optional: Synchronizing Products from {scclongform}
 
-{scc} (SCC) maintains a collection of repositories which contain packages, software and updates for all supported enterprise client systems.
+{scclongform} (SCC) maintains a collection of repositories which contain packages, software and updates for all supported enterprise client systems.
 These repositories are organized into channels each of which provide software specific to a distribution, release, and architecture.
 After synchronizing with SCC, clients can receive updates, be organized into groups, and assigned to specific product software channels.
 
@@ -134,7 +134,7 @@ This section covers synchronizing with SCC from the {webui} and adding your firs
 
 [NOTE]
 ====
-For Uyuni, synchronizing products from {scc} is optional.
+For Uyuni, synchronizing products from {scclongform} is optional.
 ====
 
 Before you can synchronize software repositories with SCC, you will need to enter organization credentials in {productname}.
@@ -152,15 +152,15 @@ Enter your organization credentials in the {productname} {webui}:
 . Enter a username and password, and click btn:[Save].
 
 A check mark icon is shown when the credentials are confirmed.
-When you have successfully entered the new credentials, you can synchronize with {scc}.
+When you have successfully entered the new credentials, you can synchronize with {scclongform}.
 
 
 
-.Optional Procedure: Synchronizing with {scc}
+.Optional Procedure: Synchronizing with {scclongform}
 . In the {productname} {webui}, navigate to menu:Admin[Setup Wizard].
 . From the [guimenu]``Setup Wizard`` page select the btn:[SUSE Products] tab.
   Wait a moment for the products list to populate.
-  If you previously registered with {scc} a list of products will populate the table.
+  If you previously registered with {scclongform} a list of products will populate the table.
   This table lists architecture, channels, and status information.
 . If your {sle} client is based on [systemitem]``x86_64`` architecture scroll down the page and select the check box for this channel now.
 . Add channels to {productname} by selecting the check box to the left of each channel.
