--- a/modules/reference/pages/cli-sync.adoc
+++ b/modules/reference/pages/cli-sync.adoc
@@ -7,7 +7,7 @@ To access a shell inside the Server container, run [literal]``mgrctl term`` on t
 ====
 
 There are two tools for synchronizing clients to the server.
-For clients that are connected to the {scc}, use ``mgr-sync``.
+For clients that are connected to the {scclongform}, use ``mgr-sync``.
 For all other clients, use ``spacewalk-repo-sync``.
 
 
@@ -16,7 +16,7 @@ For all other clients, use ``spacewalk-repo-sync``.
 
 //This content is the same as the content at modules/administration/pages/mgr-sync.adoc Perhaps we should snippet it? --LKB 2020-10-09
 
-The primary use of ``mgr-sync`` is to connect to the {scc}, retrieve product and package information, and prepare channels for synchronization with the {productname} Server.
+The primary use of ``mgr-sync`` is to connect to the {scclongform}, retrieve product and package information, and prepare channels for synchronization with the {productname} Server.
 
 This tool is designed for use with a {suse} support subscription.
 It is not required for open source distributions, including {opensuse}, {centos}, and {ubuntu}.
