--- a/modules/retail/pages/retail-next.adoc
+++ b/modules/retail/pages/retail-next.adoc
@@ -19,6 +19,6 @@ Note, however, that {productname} {smr} documentation supersedes legacy informat
 [[retail.sect.next.support]]
 == Support
 
-For personalized support, log in to your {scc} account at https://scc.suse.com/login.
+For personalized support, log in to your {scclongform} account at https://scc.suse.com/login.
 
 For assistance with planning and installing your {productname} {smr} environment, contact the SUSE Consulting team.
