--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
@@ -7,7 +7,7 @@ Connecting and registering {payg} images is supported and can be done without ad
 
 
 {byos} ({byoslongform}) Images::
-Registering {byos} images requires SCC ({scc}) credentials beforehand. 
+Registering {byos} images requires SCC ({scclongform}) credentials beforehand. 
 If a user attempts to onboard a {byos} image without providing SCC credentials, the operation will fail, as these credentials are required to verify your subscription.
 
 [IMPORTANT]
@@ -16,10 +16,10 @@ If a user attempts to onboard a {byos} image without providing SCC credentials, 
 
 * If you have SCC credentials ensure your SCC credentials are valid and have the necessary permissions for utilizing {byos} images.
 
-**Do not** register {payg} instances with the {scc}.
-Only {byos} instances should be registered against the {scc}.
+**Do not** register {payg} instances with the {scclongform}.
+Only {byos} instances should be registered against the {scclongform}.
 
-**Registering {payg} instances with the {scc}  or your own RMT server will create conflicts that are not easily solved**.  
+**Registering {payg} instances with the {scclongform}  or your own RMT server will create conflicts that are not easily solved**.  
 {payg} instances are automatically registered against the correct update server when added to your cloud service provider {productname} instance.
 ====
 
