--- a/modules/specialized-guides/pages/salt/salt-formula-yomi.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-yomi.adoc
@@ -118,10 +118,10 @@ If you want to use LVM or RAID on your devices, click btn:[+] in the appropriate
 * In the [guimenu]``Md5`` field, type the MD5 hash to use to verify the ISO.
 . In the menu:SUSEConect[Config] section, set these parameters:
 * In the [guimenu]``Registration Code`` field, type the registration code for the client you are installing.
-    You can obtain this code from {scc}.
+    You can obtain this code from {scclongform}.
 * In the [guimenu]``Email`` field, type the administrator email address to use.
 * In the [guimenu]``Url`` field, type the address of the registration server to use.
-    For example, use ``https://scc.suse.com``, to register with {scc}.
+    For example, use ``https://scc.suse.com``, to register with {scclongform}.
 * In the [guimenu]``Version`` field, type the version of the product you are registering.
 . For each product that you want to register, in the menu:SUSEConnect[Products] section, click btn:[+], and set these parameters:
 * In the [guimenu]``Product`` field, type each product you want to register.
