--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -79,7 +79,7 @@ menu:kickstartfile-sync-default[]::
 Generates {cobbler} files corresponding to {kickstart} profiles created by the configuration wizard.
 
 menu:mgr-forward-registration-default[]::
-Synchronizes client registration data with {scc}.
+Synchronizes client registration data with {scclongform}.
 By default, new, changed, or deleted client data are forwarded.
 To disable synchronization set in [path]``/etc/rhn/rhn.conf``, run:
 +
@@ -98,7 +98,7 @@ https://suselinux.fra1.qualtrics.com/jfe/form/SV_0ooNnrY0rYuQScS[Help us improve
 ====
 
 menu:mgr-sync-refresh-default[]::
-Synchronizes with {scc} (``mgr-sync-refresh``).
+Synchronizes with {scclongform} (``mgr-sync-refresh``).
 By default, all custom channels are also synchronized as part of this task.
 For more information about custom channel synchronization, see xref:administration:custom-channels.adoc#_custom_channel_synchronization[].
 
