--- a/modules/client-configuration/pages/clients-amazon.adoc
+++ b/modules/client-configuration/pages/clients-amazon.adoc
@@ -7,7 +7,7 @@ ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {amazon} repository URLs are available from {scc}
+* {amazon} repository URLs are available from {scclongform}
 * Packages and metadata are provided by Amazon, not by {suse}
 * For supported products, see the support table and the release notes
 ====
