--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -8,7 +8,7 @@ ifeval::[{suma-content} == true]
 // Do we need to provide special info for uyuni users?
 [IMPORTANT]
 ====
-* {centos} repository URLs are available from {scc}
+* {centos} repository URLs are available from {scclongform}
 * Packages and metadata are provided by CentOS, not by {suse}
 * For supported products, see the support table and the release notes
 ====
