--- a/modules/client-configuration/pages/clients-openeuler.adoc
+++ b/modules/client-configuration/pages/clients-openeuler.adoc
@@ -8,7 +8,7 @@ ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {openeuler} repository URLs are available from {scc}
+* {openeuler} repository URLs are available from {scclongform}
 * Packages and metadata are provided by XXX, not by {suse}
 * For supported products, see the support table and the release notes
 ====
