--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -136,7 +136,7 @@ transactional-update register -r <REGCODE> -e <your_email>
 
 . Reboot.
 
-. Register {productname} {productnumber} Proxy with {scc}.
+. Register {productname} {productnumber} Proxy with {scclongform}.
 +
 
 ----
