--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -29,7 +29,7 @@ You also need to ensure that reverse lookups are correctly configured.
 For more information about setting up a DNS server, see {sles-base-os-documentation}/cha-dns.html.
 
 == Air-gapped Deployment
-If you are on an internal network and do not have access to {scc}, you can use an xref:installation-and-upgrade:container-deployment/suma/server-air-gapped-deployment-suma.adoc[Air-gapped Deployment].
+If you are on an internal network and do not have access to {scclongform}, you can use an xref:installation-and-upgrade:container-deployment/suma/server-air-gapped-deployment-suma.adoc[Air-gapped Deployment].
 
 
 In a production environment, the {productname} Server and clients should always use a firewall.
@@ -83,9 +83,9 @@ Opening these ports allows network traffic from the {productname} Server to comm
 .External Port Requirements for {productname} Server
 |===
 | Port number | Protocol | Used By | Notes
-| 80          | TCP | HTTP       | Required for {scc}.
+| 80          | TCP | HTTP       | Required for {scclongform}.
 Port 80 is not used to serve the {webui}.
-| 443         | TCP | HTTPS      | Required for {scc}.
+| 443         | TCP | HTTPS      | Required for {scclongform}.
 | 25151       | TCP | Cobbler    |
 |===
 
@@ -158,7 +158,7 @@ Opening these ports allows network traffic from the {productname} Proxy to commu
 |===
 | Port number | Protocol | Used By | Notes
 | 80          |          |         | Used to reach the server.
-| 443         | TCP      | HTTPS   | Required for {scc}.
+| 443         | TCP      | HTTPS   | Required for {scclongform}.
 |===
 
 
