--- a/modules/installation-and-upgrade/pages/ports.adoc
+++ b/modules/installation-and-upgrade/pages/ports.adoc
@@ -48,9 +48,9 @@ Opening these ports allows network traffic from the {productname} Server to comm
 .External Port Requirements for {productname} Server
 |===
 | Port number | Protocol | Used By | Notes
-| 80          | TCP | HTTP       | Required for {scc}.
+| 80          | TCP | HTTP       | Required for {scclongform}.
 Port 80 is not used to serve the {webui}.
-| 443         | TCP | HTTPS      | Required for {scc}.
+| 443         | TCP | HTTPS      | Required for {scclongform}.
 |===
 
 
@@ -123,7 +123,7 @@ Opening these ports allows network traffic from the {productname} Proxy to commu
 |===
 | Port number | Protocol | Used By | Notes
 | 80          |          |         | Used to reach the server.
-| 443         | TCP      | HTTPS   | Required for {scc}.
+| 443         | TCP      | HTTPS   | Required for {scclongform}.
 |===
 
 
