--- a/modules/reference/pages/admin/setup-wizard.adoc
+++ b/modules/reference/pages/admin/setup-wizard.adoc
@@ -10,13 +10,13 @@ It is the default page when you use the {productname} {webui} for the first time
 |===
 | Option             | Description
 | HTTP Proxy         | Configure an HTTP proxy connection.
-| Organization Credentials   | Configure an organization for accessing {scc}.
+| Organization Credentials   | Configure an organization for accessing {scclongform}.
 | Products      | View product entitlements and subscribe to product channels.
 |===
 
 == Configure the HTTP Proxy
 
-{productname} can connect to the {scc} (SCC) or other remote servers using a proxy.
+{productname} can connect to the {scclongform} (SCC) or other remote servers using a proxy.
 Navigate to the [guimenu]``HTTP Proxy`` tab to configure the proxy.
 
 You will need to provide the hostname of the proxy.
@@ -33,9 +33,9 @@ These characters are reserved.
 
 == Configure Organization Credentials
 
-Your {scc} account is associated with the administration account of your organization.
-You can share your {scc} access with other users within your organization.
-Navigate to the [guimenu]``Organization Credentials`` tab to grant users within your organization access to your {scc} account.
+Your {scclongform} account is associated with the administration account of your organization.
+You can share your {scclongform} access with other users within your organization.
+Navigate to the [guimenu]``Organization Credentials`` tab to grant users within your organization access to your {scclongform} account.
 
 Click btn:[Add a new credential], enter the username and password of the user to grant access to, and click btn:[Save].
 A new credential card is shown for the user you have granted access to.
@@ -53,7 +53,7 @@ Use these buttons on the card to edit or revoke access:
 == Configure Products
 
 Your {suse} subscription entitles you to access a range of products.
-Navigate to the [guimenu]``Products`` tab to browse the products available to you and synchronize {productname} with {scc}.
+Navigate to the [guimenu]``Products`` tab to browse the products available to you and synchronize {productname} with {scclongform}.
 
 Filters help you search for products by description or architecture.
 
