--- a/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
@@ -8,7 +8,7 @@ An instance launched from a {byos} image is equivalent to a physical machine tha
 After creation:
 
 * use ``registercloudguest`` to register the instance with the SUSE-operated update infrastructure in the cloud framework, or
-* use the command ``SUSEConnect`` to register the system with {scc} using the entitlements you already have.
+* use the command ``SUSEConnect`` to register the system with {scclongform} using the entitlements you already have.
 
 Connect your system to your own running RMT or {productname} infrastructure in the same way you connect systems in your data center.
 
