--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
@@ -2,7 +2,7 @@
 
 == Onboarded {byos} Instances without SCC Credentials
 
-Valid {scc} credentials are needed to manage {byoslongform} ({byos}) instances of {suse} products in {productname} {payg}. 
+Valid {scclongform} credentials are needed to manage {byoslongform} ({byos}) instances of {suse} products in {productname} {payg}. 
 This applies to all {suse} products except {productname} Proxy {byos}. 
 Without any SCC credentials, {productname} {payg} will not allow onboarding any of the mentioned {byos} instances.
 The user will get an error.
