--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
@@ -9,7 +9,7 @@ Users can leverage the images of {productname} on a {payglongform} basis, paying
 == Introduction to {payg}
 
 {productname} {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems from several cloud services. 
-{payg} does not require a long-term subscription through the {scc}. 
+{payg} does not require a long-term subscription through the {scclongform}. 
 Users can leverage images of {productname} on a {payglongform} basis, paying only for the time of use, and the number of **managed** and **monitored** systems. 
 
 {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on {awslongform}, {azure}, and {gcplongform}.
